--- a/src/components/Information/Information.css
+++ b/src/components/Information/Information.css
@@ -20,3 +20,16 @@
     text-align: left;
     align-items: left;
 }
+
+.LateralPic{
+    position: fixed;
+    right: 10vw;
+    top: 10vh;
+}
+
+.LateralPic img{
+    width: 20vw;
+    display: block;
+    height: 60vh;
+
+}
