--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 html, body{
   
 }
+*{
+  cursor: none;
+}
 
 body {
   margin: 0;
@@ -17,3 +20,13 @@ body {
   font-weight: bold;
 }
 
+.cursor{
+  width: 2rem;
+  height: 2rem;
+  border: 0px solid yellow;
+  background: yellow;
+  border-radius: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+}
