--- a/src/components/Oasis/Oasis.css
+++ b/src/components/Oasis/Oasis.css
@@ -1,6 +1,6 @@
 .Name{
     position: fixed;
-    top: 4vh;
+    top: 3vh;
     left: 3vw;
     font-size: 5vh;
     font-style: normal;
@@ -23,6 +23,17 @@ li a:visited{
     color: black;
 }
 
+.Arrows{
+    position: fixed;
+    bottom: 5vh;
+    left: 3vw;
+    z-index: 6;
+    list-style-type: none;
+}
+
+.Arrows img{
+    height: 6vh;
+}
 
 .Oasis1{
     width: 100%;
@@ -32,7 +43,7 @@ li a:visited{
 
 .Oasis1 img{
     width: 100%;
-    height: 60vh;
+    height: 80vh;
 }
 
 .Oasis1 p{
@@ -44,13 +55,56 @@ li a:visited{
 .Oasis2{
     position: relative;
     top: 20vh;
-    left: 10vw;
+    left: 0vw;
     width: 60vw;
 }
 
 .Oasis2 img{
-    width: 40vw;
-    height: 40vh;
+    width: 50vw;
+    height: auto;
 
 }
 
+.Oasis3{
+    position: relative;
+    top: 20vh;
+    display: flex;
+}
+
+.Oasis3 img{
+    width: 40vw;
+    height: 75vh;
+    flex: 35%;
+}
+
+.Oasis3 p{
+    margin-left: 2.5vw;
+    position: relative;
+    margin-right: 20vw;
+    margin-top: 10vh;
+    flex: 75%;
+    font-size: 3.5vh;
+}
+
+.Oasis4{
+    position: relative;
+    top: 40vh;
+    display: flex;
+}
+
+.Oasis4 img{
+    width: 35vw;
+}
+.Oasis5{
+    position: relative;
+    margin-top: 40vh;
+    width: 40vw;
+    margin-left: 10vw;
+    font-size: 3vh;
+}
+
+.Oasis5 br{
+    display: block;
+    margin-top: 3.5vh;
+    content: "";
+}
