--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,10 @@
-html, body{
-  
-}
 *{
   cursor: none;
 }
 
 body {
   margin: 0;
-  font-family: HelveticaNeue;
+  font-family: HelveticaNeue, HelveticaNeueItalic;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
@@ -16,10 +13,18 @@ body {
 
 @font-face{
   font-family: "HelveticaNeue";
-  src: local("HelveticaNeue"), url("./fonts/HelveticaNeue/HelveticaNeueRegular.ttf") format("truetype");
-  font-weight: bold;
+  src: local("HelveticaNeue"), url("./fonts/HelveticaNeue.ttf") format("truetype");
 }
-
+@font-face{
+  font-family: "HelveticaNeueItalic";
+  src: local("HelveticaNeueItalic"), url('./fonts/HelveticaNeue-Italic.ttf') format("truetype");
+  font-style: italic;
+}
+@font-face{
+  font-family: "HelveticaNeueBold";
+  src: local("HelveticaNeueBold"), url('./fonts/HelveticaNeueBold.ttf') format("truetype");
+  font-style: bold;
+}
 .cursor{
   width: 2rem;
   height: 2rem;
