--- a/src/components/Oasis/Oasis.css
+++ b/src/components/Oasis/Oasis.css
@@ -1,44 +1,8 @@
-.Name{
-    position: fixed;
-    top: 3vh;
-    left: 3vw;
-    font-size: 5vh;
-    font-style: normal;
-}
-
-li{
-    list-style-type: none;
-}
-
-li a{
-    text-decoration: none;
-    text-transform: none;
-    color:black;
-}
-li a:hover{
-    font-style: italic;
-}
-li a:visited{
-    text-decoration: none;
-    color: black;
-}
-
-.Arrows{
-    position: fixed;
-    bottom: 5vh;
-    left: 3vw;
-    z-index: 6;
-    list-style-type: none;
-}
-
-.Arrows img{
-    height: 6vh;
-}
 
 .Oasis1{
     width: 100%;
     position: relative;
-    top: 12vh;
+    top: 10vh;
 }
 
 .Oasis1 img{
@@ -73,7 +37,7 @@ li a:visited{
 
 .Oasis3 img{
     width: 40vw;
-    height: 75vh;
+    height: auto;
     flex: 35%;
 }
 
@@ -88,7 +52,7 @@ li a:visited{
 
 .Oasis4{
     position: relative;
-    top: 40vh;
+    top: 30vh;
     display: flex;
 }
 .FirstColumn{
@@ -106,16 +70,38 @@ li a:visited{
 .Oasis4 img{
     width: 40vw;
 }
+
 .Oasis5{
     position: relative;
-    margin-top: 40vh;
-    width: 40vw;
+    margin-top: 42vh;
+    width: 50vw;
     margin-left: 10vw;
-    font-size: 3vh;
+    font-size: 3.5vh;
 }
 
 .Oasis5 br{
     display: block;
     margin-top: 3.5vh;
     content: "";
+}
+
+.Oasis6{
+    position: relative;
+    margin-left: 35vw;
+    margin-top: 5vh;
+    display: flex;
+}
+
+.Oasis6 img{
+    width: 30vw;
+}
+
+.FirstColumn2{
+    flex: 50%;
+    margin-left: 3.5vw;
+}
+.SecondColumn2{
+    flex: 50%;
+    margin-left: 0.5vw;
+    margin-right: 0;
 }
