--- a/src/index.css
+++ b/src/index.css
@@ -28,10 +28,11 @@ body {
 .cursor{
   width: 2rem;
   height: 2rem;
-  border: 0px solid yellow;
-  background: yellow;
+  border: 0px solid #FFFF02;
+  background: #FFFF02;
   border-radius: 50%;
   position: absolute;
   transform: translate(-50%, -50%);
   pointer-events: none;
+  z-index: 50;
 }
