--- a/src/components/Oasis/Oasis.css
+++ b/src/components/Oasis/Oasis.css
@@ -1,38 +1,38 @@
 
 .Oasis1{
     width: 100%;
-    position: relative;
-    top: 10vh;
+    position: static;
+    margin-top: 10vh;
 }
 
 .Oasis1 img{
     width: 100%;
     height: auto;
+    position: static;
 }
 
 .Oasis1 p{
-    margin-left: 40vw;
-    font-size: 3.5vh;
-    margin-right: 10vw;
-    width: 40vw;
+    margin-left: auto;
+    font-size: 1.9vw;
+    margin-right: auto;
+    width: 60vw;
+    margin-top: 17.5vh;
+    margin-bottom: 17.5vh;
 }
 
 .Oasis2{
-    position: relative;
-    top: 20vh;
-    left: 0vw;
-    width: 60vw;
+    position: static;
+    margin-top: 17.5vh;
+    margin-bottom: 0;
 }
 
 .Oasis2 img{
     width: 50vw;
-    height: auto;
-
 }
 
 .Oasis3{
-    position: relative;
-    top: 20vh;
+    position: static;
+    margin-top: 17.5vh;
     display: flex;
 }
 
@@ -43,66 +43,55 @@
 }
 
 .Oasis3 p{
-    margin-left: 2.5vw;
+    margin-left: 3.5vw;
     position: relative;
     margin-right: 20vw;
     margin-top: 10vh;
     flex: 75%;
-    font-size: 3.5vh;
+    font-size: 1.9vw;
 }
 
 .Oasis4{
-    position: relative;
-    top: 30vh;
-    display: flex;
-}
-.FirstColumn{
-    flex: 50%;
-    margin-left: 10vw;
-    margin-right: 5vw;
-}
-
-.SecondColumn{
-    flex: 50%;
-    margin-left: -4.5vw;
-    margin-right: 10vw;
+    margin-top: 17.5vh;
 }
 
 .Oasis4 img{
-    width: 40vw;
+    width: 80vw;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .Oasis5{
-    position: relative;
-    margin-top: 42vh;
-    width: 50vw;
-    margin-left: 10vw;
-    font-size: 3.5vh;
+    position: static;
+    margin-top: 17.5vh;
+    width: 60vw;
+    margin-left: 9.5vw;
+    font-size: 1.9vw;
 }
 
 .Oasis5 br{
     display: block;
-    margin-top: 3.5vh;
+    margin-top: 3.25vh;
     content: "";
 }
 
 .Oasis6{
-    position: relative;
-    margin-left: 35vw;
-    margin-top: 5vh;
-    display: flex;
+    position: static;
+    margin-top: 17.5vh;
+    border-bottom: 1px solid; 
+    padding-bottom:10px; display: flex; 
+    flex-wrap: wrap; 
+    align-items: flex-end;
 }
 
+.aux6{
+    margin-left: auto;
+}
 .Oasis6 img{
-    width: 30vw;
+    width: 70vw;
 }
 
-.FirstColumn2{
-    flex: 50%;
-    margin-left: 3.5vw;
-}
-.SecondColumn2{
-    flex: 50%;
-    margin-left: 0.5vw;
-    margin-right: 0;
+.Oasis7{
+    
 }
