--- a/src/components/MainPage/MainPage.css
+++ b/src/components/MainPage/MainPage.css
@@ -10,19 +10,15 @@
   font-style: normal;
 }
 
-li{
-  list-style-type: none;
-}
-
-li a{
+a{
   text-decoration: none;
   text-transform: none;
   color:black;
 }
-li a:hover{
+a:hover{
   font-style: italic;
 }
-li a:visited{
+a:visited{
   text-decoration: none;
   color: black;
 }
@@ -122,7 +118,7 @@ body:not(.mobile) .hover-title:hover + .hover-image {
 .hover-image img {
   max-width: 100% !important;
   max-height: 100% !important;
-  width: auto !important;
-  height: auto !important;
+  /* width: auto !important;
+  height: auto !important; */
   margin-bottom: 0;
 }
