--- a/src/components/Oasis/Oasis.css
+++ b/src/components/Oasis/Oasis.css
@@ -138,7 +138,7 @@
     width: 70vw;
     height: auto;
 }
-.Oasis11{
+.TextEquipo{
     display: flex;
     justify-content: center;
     text-align: center;
