--- a/src/components/Lectura/Lectura.css
+++ b/src/components/Lectura/Lectura.css
@@ -61,3 +61,11 @@
 .TextoLO p{
     width: 50vw;
 }
+
+.VideoLO{
+    margin-top: 17.5vh;
+    width: 80vw;
+    height: 80vh;
+    margin-left: auto;
+    margin-right: auto;
+}
