--- a/src/components/Lectura/Lectura.css
+++ b/src/components/Lectura/Lectura.css
@@ -64,8 +64,7 @@
 
 .VideoLO{
     margin-top: 17.5vh;
-    width: 80vw;
-    height: 80vh;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 12.5vh;
 }
