fixing small issues

--- a/src/components/Oasis/Oasis.css
+++ b/src/components/Oasis/Oasis.css
@@ -91,7 +91,10 @@
 .OasisRevista img{
     width: 35vw;
     height: auto;
-    padding: 8px;
+    padding-left: 16px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-right: 0;
 }
 
 .OasisProducts{
