--- a/src/components/MainPage/MainPage.css
+++ b/src/components/MainPage/MainPage.css
@@ -1,7 +1,6 @@
 .Fixed {
   text-align: left;
 }
-
 .Name{
   position: fixed;
   top: 3vh;
@@ -9,12 +8,12 @@
   font-size: 2.5vw;
   font-style: normal;
 }
-
 a{
   text-decoration: none;
   text-transform: none;
   color:black;
-  cursor: url(cursor2.png), auto;
+  cursor: url(cursor2.png), none;
+  overflow: auto;
 }
 a:hover{
   font-style: italic;
@@ -30,7 +29,6 @@ a:visited{
   z-index: 6;
   list-style-type: none;
 }
-
 .LeftArrow img{
   height: 3vw;
 }
@@ -41,10 +39,10 @@ a:visited{
   z-index: 6;
   list-style-type: none;
 }
-
 .RightArrow img{
   height: 3vw;
 }
+
 
 .Information{
   position: fixed;
@@ -54,20 +52,23 @@ a:visited{
 }
 
 .Center{
-  position: relative;
   font-size: 4vw;
+  margin: 0;
+  position: absolute;
+  top: 47.5%;
+  left: 47.5%;
+  transform: translate(-47.5%, -47.5%);
   text-align: center;
-  margin-top: 27.5vh;
-  margin-left: auto;
-  margin-right: auto;
 }
+/* 
+
 .Center img{
   height: 75vh;
 }
 
 .Center video{
   height: 65vh;
-}
+} */
 
 .Center br{
   display: block;
@@ -92,7 +93,7 @@ a:visited{
   display: none;
 }
 
-body:not(.mobile) .hover-title:hover + .hover-image {
+.hover-title:hover + .hover-image{
   display: flex;
   pointer-events: none;
   font-style: italic;
@@ -108,16 +109,14 @@ body:not(.mobile) .hover-title:hover + .hover-image {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
 
-/* Change width and height to scale images */
-  width: 60vw;
+.hover-image video{
+  width: auto;
   height: 60vh;
 }
 
-.hover-image img {
-  max-width: 100% !important;
-  max-height: 100% !important;
-  /* width: auto !important;
-  height: auto !important; */
-  margin-bottom: 0;
+.hover-image img{
+  width: auto;
+  height: 70vh;
 }
