--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
   width: 100%;
-  cursor: url(cursor2.png), auto;
+  cursor: url(cursor2.png), none;
 }
 
 @font-face{
