--- a/src/components/Ego/Ego.css
+++ b/src/components/Ego/Ego.css
@@ -12,12 +12,46 @@
 }
 
 .EgoPortada p{
-    width: 40vw;
+    width: 45vw;
     font-size: 2vw;
     margin-top: 17.5vh;
-    margin-left: -10vw;
+    margin-left: 0vw;
 }
 
 .Bienvenida{
     margin-top: 17.5vh;
+    width: 65vw;
+    height: auto;
+}
+
+.InicioEgo{
+    width: 100%;
+
+    margin-top: 17.5vh;
+    /* align-items: stretch; */
+}
+
+.InicioFlex{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.InicioFlex img{
+    width: 100%;
+    max-height: 75vh;
+    min-width: 0;
+}
+
+.JuegoEgo{
+    margin-top: 17.5vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+
+.JuegoEgo img{
+    width: 50vw;
+    height: auto;
 }
