--- a/src/components/MainPage/MainPage.css
+++ b/src/components/MainPage/MainPage.css
@@ -58,14 +58,22 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  width: 70vw;
+  height: 65vh;
 }
 
 .hover-image video{
-  width: auto;
-  height: 60vh;
+  max-width: 100%!important;
+  max-height: 100%!important;
+  width: auto!important;
+  height: auto!important;
+
 }
 
 .hover-image img{
-  width: auto;
-  height: 70vh;
+  max-width: 100%!important;
+  max-height: 100%!important;
+  width: auto!important;
+  height: auto!important;
 }
