--- a/src/components/MainPage/MainPage.css
+++ b/src/components/MainPage/MainPage.css
@@ -42,7 +42,7 @@
   display: none;
 }
 
-.hover-title:hover + .hover-image{
+body:not(.mobile) .hover-title:hover + .hover-image {
   display: flex;
   pointer-events: none;
   font-style: italic;
@@ -58,22 +58,21 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
-  width: 70vw;
+  width: 80vw;
   height: 65vh;
 }
-
-.hover-image video{
-  max-width: 100%!important;
-  max-height: 100%!important;
-  width: auto!important;
-  height: auto!important;
-
+.hover-image video {
+  max-width: 100% !important;
+  max-height: 100% !important;
+  /* width: auto !important;
+  height: auto !important; */
+  margin-bottom: 0;
 }
 
-.hover-image img{
-  max-width: 100%!important;
-  max-height: 100%!important;
-  width: auto!important;
-  height: auto!important;
+.hover-image img {
+  max-width: 100% !important;
+  max-height: 100% !important;
+  /* width: auto !important;
+  height: auto !important; */
+  margin-bottom: 0;
 }
