--- a/src/components/Ego/Ego.css
+++ b/src/components/Ego/Ego.css
@@ -37,7 +37,6 @@
 
 .InicioFlex img{
     width: 100%;
-    max-height: 75vh;
     min-width: 0;
 }
 
@@ -54,24 +53,57 @@
     height: auto;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
 .VayaEgo{
     margin-top: 17.5vh;
-    display: flex;
-    flex-direction: row;
-}
-.VayaEgo img{
-    height: auto;
-    width: 45vw;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
 }
 
-.prova1ego{
+.Col1Ego{
     display: flex;
     flex-direction: column;
 }
-
-.prova2ego{
-    object-fit: cover;
+.Col1Ego img{
+    height: 40vh;
 }
+
+.Col2Ego{
+    flex-direction: row;
+    display: flex;
+}
+
+.Col2Ego img{
+    height: 80vh;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .TegustaEgo{
     margin-top: 17.5vh;
@@ -99,7 +131,6 @@
 
 .AlterEgo img{
     width: 100%;
-    max-height: 75vh;
     min-width: 0;
 }
 
@@ -126,7 +157,6 @@
 
 .GarantiaEgo img{
     width: 98%;
-    max-height: 132.5vh;
     min-width: 0;
 }
 
