--- a/src/components/MainPage/MainPage.css
+++ b/src/components/MainPage/MainPage.css
@@ -58,21 +58,17 @@ body:not(.mobile) .hover-title:hover + .hover-image {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 80vw;
-  height: 65vh;
+  width: 60vw;
+  /* height: 120vh; */
 }
 .hover-image video {
-  max-width: 100% !important;
-  max-height: 100% !important;
-  /* width: auto !important;
-  height: auto !important; */
+  max-width: 75vw !important;
+  max-height: 65vh !important;
   margin-bottom: 0;
 }
 
 .hover-image img {
-  max-width: 100% !important;
-  max-height: 100% !important;
-  /* width: auto !important;
-  height: auto !important; */
+  max-width: 75vw!important;
+  max-height: 70vh !important;
   margin-bottom: 0;
 }
