--- a/src/components/MainPage/MainPage.css
+++ b/src/components/MainPage/MainPage.css
@@ -58,17 +58,22 @@ body:not(.mobile) .hover-title:hover + .hover-image {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 60vw;
+  /* width: 70vw; */
   /* height: 120vh; */
 }
 .hover-image video {
-  max-width: 75vw !important;
-  max-height: 65vh !important;
+  /* max-width: 120vw !important; */
+  /* max-height: 120vh !important; */
   margin-bottom: 0;
+  /* width: 70vw; */
+  height: 62.5vh;
+  width: auto;
 }
 
 .hover-image img {
   max-width: 75vw!important;
-  max-height: 70vh !important;
+  max-height: 60vh !important;
   margin-bottom: 0;
+  height: 62.5vh;
+  width: auto;
 }
