--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
   width: 100%;
-  cursor: url("CURSOR_QUADRAT.png") 25 25, none!important;
+  cursor: url("CURSOR.png") 25 25, none!important;
 }
 
 @font-face{
@@ -35,7 +35,7 @@ a{
   text-decoration: none;
   text-transform: none;
   color:black;
-  cursor: url("CURSOR_QUADRAT.png") 25 25, none!important;
+  cursor: url("CURSOR.png") 25 25, none!important;
   overflow: auto;
 }
 a:hover{
