--- a/src/components/Oasis/Oasis.css
+++ b/src/components/Oasis/Oasis.css
@@ -2,7 +2,7 @@
 .FistPhotosText{
     width: 100%;
     position: static;
-    margin-top: 10vh;
+    margin-top: 6%;
 }
 
 .FistPhotosText img{
@@ -16,42 +16,43 @@
     font-size: 1.9vw;
     margin-right: auto;
     width: 60vw;
-    margin-top: 17.5vh;
-    margin-bottom: 17.5vh;
+    margin-top: 9%;
+    margin-bottom: 9%;
 }
 
 .Superpuestas{
     position: static;
-    margin-top: 17.5vh;
+    margin-top: 9%;
     margin-bottom: 0;
 }
 
 .Superpuestas img{
     width: 55vw;
+    height: auto;
 }
 
 .GifGuion{
     position: static;
-    margin-top: 17.5vh;
+    margin-top: 9%;
     display: flex;
     flex-direction: row;
 }
 
 .GifGuion video{
-    width: 40vw;
+    width: 40%;
     height: auto;
 }
 
 .GifGuion p{
-    margin-left: 3.5vw;
+    margin-left: 5%;
     position: relative;
-    margin-top: 10vh;
-    width: 27.5vw;
+    margin-top: 5%;
+    width: 28%;
     font-size: 1.9vw;
 }
 
 .Carteles{
-    margin-top: 17.5vh;
+    margin-top: 9%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -60,26 +61,26 @@
 .Carteles img{
     width: 40vw;
     display: block;
-    padding: 8px;
+    padding: 0.5%;
 }
 
 .TextoPlat{
     position: static;
-    margin-top: 17.5vh;
-    width: 60vw;
-    margin-left: 9.5vw;
+    margin-top: 9%;
+    width: 55%;
+    margin-left: 9%;
     font-size: 1.9vw;
 }
 
 .TextoPlat br{
     display: block;
-    margin-top: 3.25vh;
+    margin-top: 3%;
     content: "";
 }
 
 .OasisRevista{
     position: static;
-    margin-top: 17.5vh;
+    margin-top: 9%;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
@@ -90,9 +91,9 @@
 .OasisRevista img{
     width: 35vw;
     height: auto;
-    padding-left: 16px;
-    padding-top: 8px;
-    padding-bottom: 8px;
+    padding-left: 1%;
+    padding-top: 0.5%;
+    padding-bottom: 0.5%;
     padding-right: 0;
 }
 
@@ -100,20 +101,20 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 17.5vh;
+    margin-top: 9%;
 }
 
 .OasisProducts img{
     width: 25vw;
-    padding: 8px;
+    padding: 0.5%;
 }
 .OasisProducts video{
     width: 25vw;
-    padding: 8px;
+    padding: 0.5%;
 }
 
 .OasisFilter{
-    margin-top: 17.5vh;
+    margin-top: 9%;
 }
 .OasisFilter video{
     width: 40vw;
@@ -124,7 +125,7 @@
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
-    margin-top: -20rem;
+    margin-top: -30%;
 }
 .OasisHab video{
     width: 40vw;
@@ -134,7 +135,7 @@
 .EquipoOasis{
     display: flex;
     justify-content: center;
-    margin-top: 17.5vh;
+    margin-top: 9%;
 }
 .EquipoOasis img{
     width: 70vw;
@@ -145,6 +146,6 @@
     justify-content: center;
     text-align: center;
     font-size: 1.9vw;
-    margin-top: 5vh;
-    margin-bottom: 5vh;
+    margin-top: 2.5%;
+    margin-bottom: 5%;
 }
