--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
   width: 100%;
+  cursor: none;
   /* cursor: url("CURSOR.png") 25 25, none!important; */
 }
-
-* {
+div#root{
+  height: 100%;
   cursor: none;
 }
 
@@ -20,11 +21,15 @@ body {
   pointer-events:none;
 }
 
-.cursors .cursor:nth-child(1) {
+.cursor:nth-child(1) {
   background-color: yellow;
   z-index: 100001;
   height: 45px;
   width: 45px;
+}
+.container{
+  width: 100%;
+  height: 100%!important;
 }
 
 @font-face{
@@ -55,6 +60,7 @@ a{
   color:black;
   /* cursor: url("CURSOR.png") 25 25, none!important; */
   overflow: auto;
+  cursor: none;
 }
 a:hover{
   font-style: italic;
