--- a/style/lectura.css
+++ b/style/lectura.css
@@ -11,9 +11,9 @@
 }
 
 .PortadaLO p{
-    width: 40vw;
+    width: 40%;
     font-size: 2vw;
-    margin-top: 17.5vh;
+    margin-top: 9%;
 }
 
 .Mockups{
@@ -21,18 +21,18 @@
     justify-items: center;
     align-items: center;
     flex-direction: column;
-    margin-top: 17.5vh;
+    margin-top: 9%;
 }
 
 .Mockups img{
-    width: 80vw;
+    width: 80%;
     height: auto;
-    padding: 8px;
+    padding: 0.5%;
 }
 
 .Ojos{
-    margin-top: 17.5vh;
-    width: 77.5vw;
+    margin-top: 9%;
+    width: 80%;
     height: auto;
 }
 
@@ -40,31 +40,34 @@
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
-    margin-top: 8px;
+    margin-top: 1%;
 }
 
 .Piezas img{
-    width: 77.5vw;
+    width: 80%;
     height: auto;
 }
 
 .TextoLO{
-    margin-top: 17.5vh;
+    margin-top: 9%;
     font-size: 2vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-left: -5vw;
+    margin-left: -2.5%;
 }
 
 .TextoLO p{
-    width: 50vw;
+    width: 45%;
 }
 
 .VideoLO{
-    margin-top: 17.5vh;
+    margin-top: 9%;
+    display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 12.5vh;
+    margin-bottom: 5%;
+    width: 75%;
+    height: 80%;
 }
