--- a/style/ego.css
+++ b/style/ego.css
@@ -112,3 +112,44 @@
     width: 100%;
     height: auto;
 }
+
+.ProvaEgo img{
+    width: 30px;
+    height: auto;
+    display: block;
+}
+
+
+.grid-container {
+    display: grid;
+    width: 100%;
+    margin-top: 9%;
+}
+
+.grid-container img{
+    width: 100%;
+    height: auto;
+}
+
+.item1 {
+    grid-column: 1;
+    grid-row: 1;
+    padding-right: 1%;
+    padding-bottom: 1%;
+}
+
+.item2 {
+    grid-column: 1;
+    grid-row: 2;
+    padding-right: 1%;
+    padding-top: 1%;
+}
+.item3 {
+    grid-column: 2;
+    grid-row: 1 / span 2;
+    padding-left: 1%;
+}
+
+.item3 img{
+    height: 100%;
+}
