--- a/style/ego.css
+++ b/style/ego.css
@@ -113,43 +113,73 @@
     height: auto;
 }
 
-.ProvaEgo img{
-    width: 30px;
-    height: auto;
-    display: block;
-}
 
-
-.grid-container {
+.VayaEgo {
     display: grid;
     width: 100%;
     margin-top: 9%;
 }
 
-.grid-container img{
+.VayaEgo img{
     width: 100%;
     height: auto;
 }
 
-.item1 {
+.VayaEgo1 {
     grid-column: 1;
     grid-row: 1;
     padding-right: 1%;
     padding-bottom: 1%;
 }
 
-.item2 {
+.VayaEgo2 {
     grid-column: 1;
     grid-row: 2;
     padding-right: 1%;
     padding-top: 1%;
 }
-.item3 {
+.VayaEgo3 {
     grid-column: 2;
     grid-row: 1 / span 2;
     padding-left: 1%;
 }
 
-.item3 img{
+.VayaEgo3 img{
     height: 100%;
+}
+
+
+
+
+.GarantiaEgo {
+    display: grid;
+    width: 100%;
+    margin-top: 9%;
+}
+
+.GarantiaEgo img{
+    width: 100%;
+    height: auto;
+}
+
+.GarantiaEgo1 {
+    grid-column: 1;
+    grid-row: 1 / span 2;
+    padding-right: 1%;
+}
+
+.GarantiaEgo1 img{
+    height: 100%;
+}
+.GarantiaEgo2 {
+    grid-column: 2;
+    grid-row: 1;
+    padding-left: 1%;
+    padding-bottom: 1%;
+}
+.GarantiaEgo3 {
+    grid-column: 2;
+    grid-row: 2;
+    padding-left: 1%;
+    padding-top: 1%;
 }
