--- a/style/ego.css
+++ b/style/ego.css
@@ -35,6 +35,8 @@
 @media screen and (max-width : 600px) {
     .InicioEgo{
         width: 80%;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 
@@ -47,7 +49,6 @@
     .InicioFlex{
         display: flex;
         flex-wrap: wrap;
-        justify-content: center;
     }
     .InicioFlex img{
         padding: 1% 1% 1% 1%;
