--- a/style/tresrosas.css
+++ b/style/tresrosas.css
@@ -1,19 +1,21 @@
-.PortadaRosas{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.PortadaRosasImg{
     margin-top: 10vh;
-}
-.PortadaRosas img{
     width: 100%;
-    height: auto;
 }
 
-.PortadaRosas p{
+.RosasPrimerTexto{
     width: 52.5%;
     font-size: 2vw;
     margin-top: 9%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@media screen and (max-width : 600px) {
+    .RosasPrimerTexto{
+        font-size: larger;
+        width: 65%;
+    }
 }
 
 .CocheyActriz{
@@ -22,11 +24,16 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    
 }
+
 .CocheyActriz img{
     padding: 0.5%;
     width: 60%;
+}
+@media screen and (max-width : 600px) {
+    .CocheyActriz img{
+        width: 80%;
+    }
 }
 
 .Mesa {
@@ -53,6 +60,13 @@
     font-size: 2vw;
     width: 50%;
 }
+@media screen and (max-width : 600px) {
+    .TextoRosas{
+        font-size: larger;
+        width: 65%;
+        margin-left: 15%;
+    }
+}
 
 .Cajas{
     margin-top: 9%;
@@ -61,9 +75,16 @@
     justify-content: center;
 }
 
+
 .Cajas img{
     width: 70%;
     height:auto;
+}
+
+@media screen and (max-width : 600px) {
+    .Cajas img{
+        width: 80%;
+    }
 }
 
 .Coche{
@@ -74,11 +95,17 @@
 
 .EquipoRosas{
     margin-top: 4%;
-    margin-bottom: 9%;
+    margin-bottom: 5%;
     font-size: 2vw;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     text-align: center;
+}
+
+@media screen and (max-width : 600px) {
+    .EquipoRosas{
+        font-size: larger;
+    }
 }
