--- a/style/lidia.css
+++ b/style/lidia.css
@@ -1,8 +1,13 @@
 .LidiaPortada{
     width: 100%;
     position: static;
-    margin-top: 6%;
+    margin-top: 10vh;
     height: auto;
+}
+@media screen and (max-width: 600px) {
+    .LidiaPortada{
+        margin-top: 10%;
+    }
 }
 
 .LidiaText1{
@@ -13,6 +18,13 @@
     margin-top: 9%;
 }
 
+@media screen and (max-width: 600px) {
+    .LidiaText1{
+        font-size: larger;
+        width: 70%;
+    }
+}
+
 .Pilares{
     width: 80%;
     margin-left: auto;
@@ -20,10 +32,22 @@
     display: block;
     margin-top: 9%;
 }
+@media screen and (max-width: 600px) {
+    .Pilares{
+        width: 100%;
+        height: auto;
+    }
+}
 
 .SistemaVisual{
     margin-left: 10%;
     font-size: 1.9vw;
+}
+@media screen and (max-width: 600px) {
+    .SistemaVisual{
+        font-size: larger;
+        width: 80%;
+    }
 }
 
 .LidiaVideo{
@@ -34,11 +58,24 @@
     margin-right: auto;
     margin-top: 9%;
 }
-
+@media screen and (max-width: 600px) {
+    .LidiaVideo{
+        width: 80%;
+    }
+}
 .Composicion{
     width: 50%;
     font-size: 1.9vw;
     margin-left: 22.5%;
+}
+
+@media screen and (max-width: 600px) {
+    .Composicion{
+        font-size: larger;
+        width: 75%;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
 
 .LidiaCuad{
@@ -52,6 +89,11 @@
     width: 25vw;
     padding: 0.5%;
 }
+@media screen and (max-width: 600px) {
+    .LidiaCuad img{
+        width: 30vw;
+    }
+}
 
 .LidiaInstagram{
     display: flex;
@@ -61,4 +103,9 @@
     font-size: 1.9vw;
     margin-top: 9%;
     margin-bottom: 9%;
+}
+@media screen and (max-width: 600px) {
+    .LidiaInstagram{
+        font-size: larger;
+    }
 }
