--- a/style/oasis.css
+++ b/style/oasis.css
@@ -11,7 +11,7 @@
 }
 .FirstTextOasis{
     margin-left: auto;
-    font-size: normal;
+    font-size: x-large;
     margin-right: auto;
     width: 62%;
     margin-top: 9%;
@@ -75,7 +75,7 @@
     position: relative;
     margin-top: 5%;
     width: 28%;
-    font-size: normal;
+    font-size: x-large;
 }
 @media screen and (max-width: 600px) {
     .GifGuion p{
@@ -109,7 +109,7 @@
     margin-top: 9%;
     width: 55%;
     margin-left: 9%;
-    font-size: medium;
+    font-size: x-large;
 }
 @media screen and (max-width: 600px) {
     .TextoPlat{
@@ -234,7 +234,12 @@
     display: flex;
     justify-content: center;
     text-align: center;
-    font-size: medium;
+    font-size: x-large;
     margin-top: 2.5%;
     margin-bottom: 5%;
+}
+@media screen and (max-width: 600px){
+    .TextoEquipoOasis{
+        font-size: larger;
+    }
 }
